Fri May  9 17:58:21 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * bin/MakeProjectCreator/modules/AutomakeWorkspaceHelper.pm:

          Revert changes of:
          Thu May  8 22:13:24 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

          Now that ETCL Parser library has been renamed back to
          ACE_ETCL_Parser.

Fri May  9 17:55:39 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * examples/Monitor/Bytes_Sent/Makefile.am:
        * examples/Monitor/Message_Queue_Size/Makefile.am:
        * examples/Monitor/Constraint/Makefile.am:
        * examples/Monitor/CPU_Load/Makefile.am:
        * examples/Monitor/Num_Threads/Makefile.am:
        * examples/Monitor/Group/Makefile.am:
        * examples/Monitor/Memory_Usage/Makefile.am:
        * ace/ETCL/Makefile.am:
        * ace/MonitorControl/Makefile.am:

          Regenerated.

Fri May  9 14:17:11 UTC 2008  William R. Otte  <wotte@william-r-ottes-macbook-pro.local>

        * include/makeinclude/platform_macosx_icc.GNU:

          Support for ICC on Intel Macs.

Fri May  9 12:04:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-all.h:
          Added ACE_HAS_MONITOR_POINTS which currently is set to 0. We will
          enable this in a few builds to test them in detail. This way the
          user can decide to enable the monitor framework but not get the
          ACE builtin monitor points

        * ace/CDR_Stream.cpp:
        * ace/CDR_Stream.h:
        * ace/CDR_Stream.inl:
        * ace/Message_Queue_T.cpp:
        * ace/Message_Queue_T.h:
          Added monitor points

        * ace/Codeset_IBM1047.cpp:
          Removed code to silence the hp compiler, this is not needed in other
          files

Fri May  9 11:44:59 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * bin/MakeProjectCreator/config/ace_etcl_parser.mpb:

          Changed the filename etcl_parser.mpb to the one
          above, for consistency in the names of ACE-related