@@ -1,3 +1,14 @@
+Fri May  9 18:58:52 UTC 2008  Iliyan Jeliazkov  <iliyan@ociweb.com>
+
+        * ace/Service_Config.h:
+        * ace/Service_Config.inl:
+        * ace/Service_Config.cpp:
+        * ace/Service_Gestalt.cpp:
+
+        Calling ACE_Service_Config::open() does not correctly initialize
+        the SC global state (process name, in particular but others
+        too). Fixing bug#3319.
+
 Fri May  9 17:58:21 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>
 
         * bin/MakeProjectCreator/modules/AutomakeWorkspaceHelper.pm:
